--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@heroicons/react": "^2.1.1",
         "@hookform/resolvers": "^3.3.4",
         "@preact/signals-react": "^2.0.0",
+        "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-icons": "^1.3.0",
@@ -41,6 +42,8 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "date-fns": "^3.3.1",
+        "embla-carousel-react": "^8.0.0",
+        "jotai": "^2.7.1",
         "lucide-react": "^0.344.0",
         "nprogress": "^0.2.0",
         "react-charts": "3.0.0-beta.57",
