--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@radix-ui/react-radio-group": "^1.1.3",
         "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-switch": "^1.0.3",
         "@radix-ui/react-toast": "^1.1.5",
         "@tanstack/react-table": "^8.13.2",
         "class-variance-authority": "^0.7.0",
@@ -44,8 +45,10 @@
         "date-fns": "^3.3.1",
         "embla-carousel-react": "^8.0.0",
         "jotai": "^2.7.1",
+        "jspdf": "^2.5.1",
         "lucide-react": "^0.344.0",
         "nprogress": "^0.2.0",
+        "qrcode.react": "^3.1.0",
         "react-charts": "3.0.0-beta.57",
         "react-datepicker": "^6.2.0",
         "react-day-picker": "^8.10.0",
